--- a/src/serverless.yml
+++ b/src/serverless.yml
@@ -2,16 +2,17 @@ service: transmitter-smtp-service
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs18.x
   stage: ${opt:stage, 'dev'}
   region: eu-west-1
   memorySize: 256
   environment:
-    EMAIL_FROM: ${ssm:/transmitter/service/smtp/email/FROM}
-    SMTP_CONFIGURATION: ${ssm:/transmitter/service/smtp/SMTP_CONFIGURATION~true}
+    REGION: ${self:provider.region}
+    STAGE: ${self:provider.stage}
+    EMAIL_FROM: ${file(./serverless.vars.${self:provider.stage}.yml):email_from}
+    SMTP_CONFIGURATION: ${file(./serverless.vars.${self:provider.stage}.yml):smtp_configuration}
 
 plugins:
-  - serverless-offline-aws-ssm
   - serverless-offline
 
 package:
@@ -28,8 +29,9 @@ functions:
   http:
     handler: handler/http.app
     events:
-      - http: 'ANY /'
-      - http: 'ANY {proxy+}'
+      - httpApi:
+          method: ANY
+          path: /{proxy+}
 
 custom:
   serverless-offline:
