--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - verisure
     ports:
       - "727:3000"
-    command: sh -c "npm install && npm run dev"
+    command: sh -c "if [ ! -d /projects/node_modules ]; then npm install; fi && npm run dev"
 networks:
   verisure:
     name: verisure
